--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gl-mat4": "^1.1.4",
     "gl-wireframe": "^1.0.1",
     "normals": "^1.1.0",
+    "primitive-cylinder": "^1.0.1",
     "regl": "^1.3.0",
     "regl-camera": "^2.1.1"
   }
